--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="{{ session.get('lang', 'en') }}">
 <head>
   <meta charset="utf-8">
   <title>{% block title %}VODUM{% endblock %}</title>
