--- a/templates/monitoring/tabs/users.html
+++ b/templates/monitoring/tabs/users.html
@@ -26,7 +26,7 @@
           {% for u in rows %}
             <tr class="border-b border-slate-800">
               <td class="py-3 pr-4 font-semibold">{{ u.username or "-" }}</td>
-              <td class="py-3 pr-4">{{ u.last_watch_at or "-" }}</td>
+              <td class="py-3 pr-4">{{ u.last_watch_at|tz or "-" }}</td>
               <td class="py-3 pr-4">{{ u.total_plays or 0 }}</td>
               <td class="py-3 pr-4">{{ u.watch_time or "0h 0m" }}</td>
               <td class="py-3 pr-4">{{ u.last_ip or "-" }}</td>
